Added tversky focal loss

--- a/src/003-Confusion_matrix.ipynb
+++ b/src/003-Confusion_matrix.ipynb
@@ -175,6 +175,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2, 3, 4, 5, 6, 7, 8]),\n",
+       " array([259306, 237273,  55051, 276900,   3903, 389187,  89100]))"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(true, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2, 3, 5, 6, 7, 8]),\n",
+       " array([214786, 240880, 235333,  65536, 474452,  79733]))"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(pred, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -352,6 +394,13 @@
    "source": [
     "list(np.unique([true, pred]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
